# cookiecutters

./: LICENSE  cookiecutter
python_poetry/: cookiecutter.json
python_poetry/{{cookiecutter.project_slug}}/: pyproject.toml
