[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}}"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest_mock = "^3.3.1"
pytest_faker = "^2.0.0"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
Faker = "^13.3.4"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"

[tool.kedro]

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
